--- a/visual_computing/Makefile
+++ b/visual_computing/Makefile
@@ -1,11 +1,6 @@
-.PHONY install apt-install
-
-install:
-	source venv/bin/activate
-	pip install -r requirements.txt
-
 apt-install:
-	sudo apt-get install libblas-dev
-	sudo apt-get install liblapack-dev
-	sudo apt-get install gfortran
-	make install
+	apt-get install libblas-dev
+	apt-get install liblapack-dev
+	apt-get install gfortran
+	apt-get install libfreetype6-dev
+	apt-get install libpng-dev
